--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						&#149;<b>Aristotle:</b> use of language to convince people <br>
 						&#149;Many types of Rhetorical Tradition <br>
 						&nbsp;&nbsp;&nbsp; <b>Aristotle:</b> "the art of effective or persuasive speaking or writing" <br>
-						&nbsp;&nbsp;&nbsp; <b>Trump:</b> "often lacking sincerity, truth and meaninful content"
+						&nbsp;&nbsp;&nbsp; <b>Trump:</b> "often lacking sincerity, truth and meaningful content"
 					</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
