--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<h2>Modern Tradition &nbsp;&nbsp;<a href="https://en.wikipedia.org/wiki/Modern_rhetoric">*</a></h2> 
 					</header>
 					<p>
-					&#149;Not talked about seldomly but still used very often in politics and by World leaders ex. Donald Trump <br>
+					&#149;Not seldomly talked about but still used very often in politics and by World leaders ex. Donald Trump <br>
 					&#149;Though not talked about often, we still use it everyday in our lives<br>
 					&nbsp;&nbsp;&nbsp; &#149;When trying to persuade someone <br>
 					&nbsp;&nbsp;&nbsp; &#149;Expressed in any type of media like Twitter, speech, advertisement, speaking <br>
@@ -120,7 +120,7 @@
 					<header>
 						<h2>Examples</h2>
 						<p>
-						Below are many examples of different rhetorical traditions. Before clicking on the images, try to get a better understand of it first. Second, if you think it is one of the three types of rhetorical devices, click on it and see if you were correct. Third, if you are curious about the example, click on the image and you will be given a link and explanation. 
+						Below are many examples of different rhetorical traditions. Before clicking on the images, try to get a better understanding of it first. Second, if you think it is one of the three types of rhetorical devices, click on it and see if you were correct. Third, if you are curious about the example, click on the image and you will be given a link and explanation. 
 						</p>
 					</header>
 
@@ -228,7 +228,7 @@ This is to mislead the audience. -->
 					<header>
 						<h2>Examples</h2>
 						<p>
-						Below are many examples of different human nature term. Before clicking on the images, try to get a better understand of it first. Second, if you think it is one of the theories of human nature, click on it and see if you were correct. Third, if you are curious about the image, click on it and you will be given a link and explanation.
+						Below are many examples of different human nature term. Before clicking on the images, try to get a better understanding of it first. Second, if you think it is one of the theories of human nature, click on it and see if you were correct. Third, if you are curious about the image, click on it and you will be given a link and explanation.
 						</p>
 					</header>
 
