--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ This is to mislead the audience. -->
 					<b>Philosopher:</b> John Locke <br>
 					&#149 Also known as "Tabula Rasa" in Latin <br>
 					&#149 States everyone is born as a "blank slate" and through civilization and experiences, people begin to learn to process data to become who they truly are. <br>
-					&#149 Most reasonable and logically theory <br>
+					&#149 Most reasonable and logical theory <br>
 					&#149 People are raised by people around them, their parents, culture and they become who they are because of it.
 					</p>
 				</div>
@@ -195,7 +195,7 @@ This is to mislead the audience. -->
 					&#149 Civilization brings privileges into our society which corrupts us as humans. Wars and conflicts are created because of some of the things below. <br>
 					&nbsp;&nbsp;&nbsp; &#149; Money - $$$ <br>
 					&nbsp;&nbsp;&nbsp; &#149; Power - Fighting for high class<br>
-					&nbsp;&nbsp;&nbsp; &#149; Land - Nations vs. Nations for territory< <br>
+					&nbsp;&nbsp;&nbsp; &#149; Land - Nations vs. Nations for territory <br>
 					&nbsp;&nbsp;&nbsp; &#149; Technology - & its advancement  <br>
 					</p>
 				</div>
