--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<h2>Modern Tradition &nbsp;&nbsp;<a href="https://en.wikipedia.org/wiki/Modern_rhetoric">*</a></h2> 
 					</header>
 					<p>
-					&#149; seldomly talked about but still used very often in politics and by World leaders ex. Donald Trump <br>
+					&#149; Seldomly talked about but still used very often in politics and by World leaders ex. Donald Trump <br>
 					&#149;Though not talked about often, we still use it everyday in our lives<br>
 					&nbsp;&nbsp;&nbsp; &#149;When trying to persuade someone <br>
 					&nbsp;&nbsp;&nbsp; &#149;Expressed in any type of media like Twitter, speech, advertisement, speaking <br>
